Fix z-index for filters

--- a/scaladoc/resources/dotty_res/styles/theme/components/api-filters.css
+++ b/scaladoc/resources/dotty_res/styles/theme/components/api-filters.css
@@ -1,7 +1,7 @@
 #content .documentableFilter {
   display: flex;
   flex-wrap: wrap;
-  z-index: 2;
+  z-index: 1;
   row-gap: calc(2 * var(--base-spacing));
   position: relative;
   margin-bottom: calc(6 * var(--base-spacing));
